try with openshift-osd:0.2.23-1-g48d3fa5667-snapshot

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1239,7 +1239,7 @@ commands:
               -e REDHAT_PULL_SECRET_BASE64="$REDHAT_PULL_SECRET_BASE64" \
               -e AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" \
               -e AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY" \
-              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.20 \
+              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.23-1-g48d3fa5667-snapshot \
               aws destroy
 
   destroy-osd-gcp-cluster:
@@ -1263,7 +1263,7 @@ commands:
               -e REDHAT_PULL_SECRET_BASE64="$REDHAT_PULL_SECRET_BASE64" \
               -e GCP_SA_CREDS_JSON_BASE64="$GCP_SA_CREDS_JSON_BASE64" \
               -e GCP_PROJECT="srox-temp-dev-test" \
-              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.20 \
+              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.23-1-g48d3fa5667-snapshot \
               gcp destroy
 
 
@@ -4623,7 +4623,7 @@ jobs:
               -e REDHAT_PULL_SECRET_BASE64="$REDHAT_PULL_SECRET_BASE64" \
               -e AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" \
               -e AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY" \
-              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.20 \
+              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.23-1-g48d3fa5667-snapshot \
               aws create
             mkdir -p /home/circleci/artifacts
             docker cp artifacts:/data/. /home/circleci/artifacts
@@ -4656,7 +4656,7 @@ jobs:
               -e REDHAT_PULL_SECRET_BASE64="$REDHAT_PULL_SECRET_BASE64" \
               -e GCP_SA_CREDS_JSON_BASE64="$GCP_SA_CREDS_JSON_BASE64" \
               -e GCP_PROJECT="srox-temp-dev-test" \
-              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.20 \
+              gcr.io/stackrox-infra/automation-flavors/openshift-osd:0.2.23-1-g48d3fa5667-snapshot \
               gcp create
             mkdir -p /home/circleci/artifacts
             docker cp artifacts:/data/. /home/circleci/artifacts
