--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -66,6 +66,7 @@
         "react-numeric-input": "^2.2.3",
         "react-onclickoutside": "^6.10.0",
         "react-popper": "0.9.0",
+        "react-query": "^3.35.0",
         "react-redux": "^7.2.6",
         "react-responsive": "^8.2.0",
         "react-router-dom": "^5.2.0",
