--- a/operator/tests/common/image-pull-secrets.yaml
+++ b/operator/tests/common/image-pull-secrets.yaml
@@ -7,6 +7,16 @@ commands:
     secret=$(mktemp)
     registry_hostname=quay.io
     ../../../../deploy/common/pull-secret.sh stackrox ${registry_hostname} > $secret
-    KUBECONFIG=$KUBECONFIG -n $NAMESPACE create -f $secret
+    echo
+    env | sort
+    echo
+    pwd
+    echo
+    find .. | grep -i kube
+    echo
+    if ! KUBECONFIG=$KUBECONFIG -n $NAMESPACE create -f $secret; then
+      echo retrying with KUBECONFIG=kubeconfig
+      KUBECONFIG=kubeconfig -n $NAMESPACE create -f $secret; then
+    fi
     echo "Created pull secret for ${registry_hostname} in $NAMESPACE"
     rm $secret
