fix broken debugs

--- a/operator/tests/common/image-pull-secrets.yaml
+++ b/operator/tests/common/image-pull-secrets.yaml
@@ -12,11 +12,9 @@ commands:
     echo
     pwd
     echo
-    find .. | grep -i kube
+    echo catting kubeconfig
+    cat $KUBECONFIG || true
     echo
-    if ! KUBECONFIG=$KUBECONFIG -n $NAMESPACE create -f $secret; then
-      echo retrying with KUBECONFIG=kubeconfig
-      KUBECONFIG=kubeconfig -n $NAMESPACE create -f $secret; then
-    fi
+    kubectl -n $NAMESPACE create -f $secret
     echo "Created pull secret for ${registry_hostname} in $NAMESPACE"
     rm $secret
