--- a/operator/tests/central/basic/20-verify-password.yaml
+++ b/operator/tests/central/basic/20-verify-password.yaml
@@ -1,4 +1,4 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
-- command: KUBECONFIG=$KUBECONFIG exec -n $NAMESPACE deployment/central -- roxctl central whoami --insecure-skip-tls-verify -p letmein
+- command: kubectl exec -n $NAMESPACE deployment/central -- roxctl central whoami --insecure-skip-tls-verify -p letmein
