--- a/operator/tests/common/image-pull-secrets.yaml
+++ b/operator/tests/common/image-pull-secrets.yaml
@@ -13,7 +13,7 @@ commands:
     pwd
     echo
     echo catting kubeconfig
-    cat $KUBECONFIG || true
+    cat "$KUBECONFIG" || true
     echo
     kubectl -n $NAMESPACE create -f $secret
     echo "Created pull secret for ${registry_hostname} in $NAMESPACE"
