--- a/operator/tests/common/image-pull-secrets.yaml
+++ b/operator/tests/common/image-pull-secrets.yaml
@@ -15,6 +15,10 @@ commands:
     echo catting kubeconfig
     cat "$KUBECONFIG" || true
     echo
-    kubectl -n $NAMESPACE create -f $secret
+    echo
+    echo catting real kubeconfig
+    cat "$REAL_KUBECONFIG" || true
+    echo
+    KUBECONFIG="${REAL_KUBECONFIG}" kubectl -n $NAMESPACE create -f $secret
     echo "Created pull secret for ${registry_hostname} in $NAMESPACE"
     rm $secret
