--- a/sensor/tests/resource/service/yaml/nginx-pod.yaml
+++ b/sensor/tests/resource/service/yaml/nginx-pod.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-pod
+  name: nginx-rogue
   labels:
-    app: nginx-app
+    app: nginx-rogue
 spec:
   containers:
   - name: nginx
     image: nginx:1.14.1
     ports:
     - containerPort: 80
-  serviceAccountName: nginx-sa
