--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -131,6 +131,9 @@ deployment.check.long = Check deployments for deploy time policy violations, and
 deployment.short = Commands related to deployments.
 deployment.long =
 
+doctor.short = Analyze diagnostic bundle.
+doctor.long = Check diagnostic bundle for potential problems and print a report.
+
 image.check.short = Check images for build time policy violations, and report them.
 image.check.long = Check images for build time policy violations, and report them.
 
