change name to match demo env :facepalm:

--- a/operator/tests/common/upgrade-assert.envsubst.yaml
+++ b/operator/tests/common/upgrade-assert.envsubst.yaml
@@ -28,7 +28,7 @@ kind: SecuredCluster
 metadata:
   name: stackrox-secured-cluster-services
 status:
-  clusterName: testing-cluster
+  clusterName: my-cluster
   conditions:
   - status: "True"
     type: Deployed
