Run the test 50 times.

--- a/qa-tests-backend/Makefile
+++ b/qa-tests-backend/Makefile
@@ -61,6 +61,55 @@ bat-test: compile
 act-test: compile
 	@echo "+ $@"
 	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
+	$(GRADLE) test --tests=AdmissionControllerTest $(GRADLE_TEST_ARGS)
 
 .PHONY: smoke-test
 smoke-test: compile
