--- a/image/templates/helm/stackrox-secured-cluster/templates/collector.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/collector.yaml
@@ -187,4 +187,6 @@ spec:
       - name: tmp-volume
         emptyDir: {}
       - name: cache-volume
-        emptyDir: {}
+        emptyDir:
+          sizeLimit: 200Mi
+
